apps/base/dev-argo-cd/deploy/base/server/argocd-server-ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-grpc-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - argo-cd.dev.intra.k8s.test
      secretName: ingress-tls
      #secretName: argocd-secret # do not change, this is provided by Argo CD
  rules:
  - host: argo-cd-api.dev.intra.k8s.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
